--- a/src/app/shared/banner/banner.component.html
+++ b/src/app/shared/banner/banner.component.html
@@ -13,12 +13,13 @@
       >
         Mobiquity
       </div>
-      <span class="col-auto col-sm mx-auto p-2">
-        <span class="link-without-style pr-3" routerLink="/">Dashboard</span> |
-        <span class="link-without-style pl-3" routerLink="about"
-          >About</span
-        ></span
+      <span
+        *ngIf="route != '/'"
+        routerLink="/"
+        class="col-auto col-sm mx-auto p-2 text-right link-without-style"
       >
+        Return to dashboard
+      </span>
     </div>
   </div>
 </div>
